--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://gitlab.com/JonathanDUFOUR/libft_string.git
 [submodule "mlx_linux"]
 	path = mlx_linux
-	url = https://github.com/42Paris/minilibx-linux
+	url = https://github.com/codam-coding-college/MLX42.git
